--- a/AzureDevops/appsettings.json
+++ b/AzureDevops/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=PHATLTSE62882;Database=Weather;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
