--- a/AzureDevops/appsettings.json
+++ b/AzureDevops/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PHATLTSE62882;Database=Weather;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=PHATLTSE62882;Database=Weather;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "HostingConnection": "Data Source=SQL5050.site4now.net;Initial Catalog=DB_A54829_server;User Id=DB_A54829_server_admin;Password=faker01@123;"
   }
 }
